// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`note A basic note to call out information on a page. renders as expected 1`] = `
<div
  className="flex-parent flex-parent--row mb18"
  style={
    Object {
      "background": "#f1faff",
      "borderRadius": "4px",
      "color": "#587594",
      "fontSize": "13px",
      "lineHeight": "20px",
      "padding": "18px",
    }
  }
>
  <div
    className="flex-child mr12"
  >
    <svg
      height={60}
      viewBox="0 0 108 108"
      width={60}
    >
      <circle
        cx="53"
        cy="55"
        fill="#47b9f3"
        r="45"
      />
      <rect
        fill="#1274c6"
        height="34.501"
        rx="5.219"
        ry="5.219"
        transform="rotate(.605 53.4 58.455)"
        width="52.254"
        x="27.273"
        y="41.204"
      />
      <path
        d="M64.1 34.848s-9.912-.76-10.008 8.42-.093 24.736-.093 24.736S58.822 64.96 62.79 65l15.404.163A1.788 1.788 0 0 0 80 63.393l.281-26.601A1.773 1.773 0 0 0 78.527 35z"
        fill="#309ef9"
      />
      <path
        d="M43.971 34.157s10.21-.563 10.11 8.821S53.998 68 53.998 68s-5.25-2.957-9.331-3L28.78 64.83A1.786 1.786 0 0 1 27 63.04l.288-27.286A1.786 1.786 0 0 1 29.106 34z"
        fill="#0d84fd"
      />
    </svg>
  </div>
  <div
    className="flex-child"
  >
    <div
      className="txt-bold txt-m mb6"
    >
      Note
    </div>
    <p>
      Here is a little thing to note.
    </p>
  </div>
</div>
`;

exports[`note A note to display an error with steps or links on how to troubleshoot. renders as expected 1`] = `
<div
  className="flex-parent flex-parent--row mb18"
  style={
    Object {
      "background": "#fbe5e5",
      "borderRadius": "4px",
      "color": "#ba3b3f",
      "fontSize": "13px",
      "lineHeight": "20px",
      "padding": "18px",
    }
  }
>
  <div
    className="flex-child mr12"
  >
    <svg
      className="color-red"
      height={60}
      viewBox="0 0 60 60"
      width={60}
    >
      <circle
        cx="30"
        cy="30"
        fill="#ffb9a9"
        r="25"
      />
      <path
        d="M30 15.7c-1.3 0-2.7.7-3.3 1.8l-9.6 20.4c-1.1 1.8 0 4.4 2.4 4.4h20.9c2.4 0 3.6-2.7 2.4-4.4l-9.6-20.4c-.5-1.2-1.9-1.8-3.2-1.8zm0 6.6c1.3 0 2.2.9 2.2 2.2V29c0 1.3-.9 2.2-2.2 2.2-1.3 0-2.2-.9-2.2-2.2v-4.4c0-1.4.9-2.3 2.2-2.3zm0 11.1c1.3 0 2.2.9 2.2 2.2s-.9 2.2-2.2 2.2c-1.3 0-2.2-.9-2.2-2.2s.9-2.2 2.2-2.2z"
        fill="#d85a3d"
      />
    </svg>
  </div>
  <div
    className="flex-child"
  >
    <div
      className="txt-bold txt-m mb6"
    >
      Error
    </div>
    <p>
      Did something not go as planned? Check out the
       
      <a
        href="#"
      >
        troubleshooting guide
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`note A note to display with a message about new products or features. renders as expected 1`] = `
<div
  className="flex-parent flex-parent--row mb18"
  style={
    Object {
      "background": "#e8f5ee",
      "borderRadius": "4px",
      "color": "#1b7d4f",
      "fontSize": "13px",
      "lineHeight": "20px",
      "padding": "18px",
    }
  }
>
  <div
    className="flex-child mr12"
  >
    <svg
      height={60}
      viewBox="0 0 60 60"
      width={60}
    >
      <circle
        cx="29.4"
        cy="30.3"
        fill="#83e5af"
        r="25"
      />
      <path
        d="M39.6 26.4c0 5.4-7.8 14.9-10.1 17.9-2.4-3-10.1-12.5-10.1-17.9s5.2-10.1 10.1-10.1 10.1 4.8 10.1 10.1z"
        fill="#3dbc7d"
      />
    </svg>
  </div>
  <div
    className="flex-child"
  >
    <div
      className="txt-bold txt-m mb6"
    >
      New!
    </div>
    <p>
      Check out the new 
      <a
        href="#"
      >
        Pizza API
      </a>
      . Build the perfect pie!
    </p>
  </div>
</div>
`;

exports[`note A warning note to let the user know something has changed or will change. renders as expected 1`] = `
<div
  className="flex-parent flex-parent--row mb18"
  style={
    Object {
      "background": "#feefe2",
      "borderRadius": "4px",
      "color": "#945823",
      "fontSize": "13px",
      "lineHeight": "20px",
      "padding": "18px",
    }
  }
>
  <div
    className="flex-child mr12"
  >
    <svg
      className="color-orange"
      height={60}
      viewBox="0 0 60 60"
      width={60}
    >
      <circle
        cx="30"
        cy="30"
        fill="#fbcea6"
        r="25"
      />
      <path
        d="M30 15.7c-1.3 0-2.7.7-3.3 1.8l-9.6 20.4c-1.1 1.8 0 4.4 2.4 4.4h20.9c2.4 0 3.6-2.7 2.4-4.4l-9.6-20.4c-.5-1.2-1.9-1.8-3.2-1.8zm0 6.6c1.3 0 2.2.9 2.2 2.2V29c0 1.3-.9 2.2-2.2 2.2-1.3 0-2.2-.9-2.2-2.2v-4.4c0-1.4.9-2.3 2.2-2.3zm0 11.1c1.3 0 2.2.9 2.2 2.2s-.9 2.2-2.2 2.2c-1.3 0-2.2-.9-2.2-2.2s.9-2.2 2.2-2.2z"
        fill="#ba7334"
      />
    </svg>
  </div>
  <div
    className="flex-child"
  >
    <div
      className="txt-bold txt-m mb6"
    >
      This API is in beta
    </div>
    <p>
      The API may change without advance notice during the preview period. Preview features are not supported for production use.
    </p>
  </div>
</div>
`;

exports[`note Note with custom title. renders as expected 1`] = `
<div
  className="flex-parent flex-parent--row mb18"
  style={
    Object {
      "background": "#f1faff",
      "borderRadius": "4px",
      "color": "#587594",
      "fontSize": "13px",
      "lineHeight": "20px",
      "padding": "18px",
    }
  }
>
  <div
    className="flex-child mr12"
  >
    <svg
      height={60}
      viewBox="0 0 108 108"
      width={60}
    >
      <circle
        cx="53"
        cy="55"
        fill="#47b9f3"
        r="45"
      />
      <rect
        fill="#1274c6"
        height="34.501"
        rx="5.219"
        ry="5.219"
        transform="rotate(.605 53.4 58.455)"
        width="52.254"
        x="27.273"
        y="41.204"
      />
      <path
        d="M64.1 34.848s-9.912-.76-10.008 8.42-.093 24.736-.093 24.736S58.822 64.96 62.79 65l15.404.163A1.788 1.788 0 0 0 80 63.393l.281-26.601A1.773 1.773 0 0 0 78.527 35z"
        fill="#309ef9"
      />
      <path
        d="M43.971 34.157s10.21-.563 10.11 8.821S53.998 68 53.998 68s-5.25-2.957-9.331-3L28.78 64.83A1.786 1.786 0 0 1 27 63.04l.288-27.286A1.786 1.786 0 0 1 29.106 34z"
        fill="#0d84fd"
      />
    </svg>
  </div>
  <div
    className="flex-child"
  >
    <div
      className="txt-bold txt-m mb6"
    >
      A very important note
    </div>
    <div>
      <p>
        Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Maecenas sed diam eget risus varius blandit sit amet non magna.
      </p>
      <p>
        Cras mattis consectetur purus sit amet fermentum. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Vestibulum id ligula porta felis euismod semper. Nullam id dolor id nibh ultricies vehicula ut id elit. Curabitur blandit tempus porttitor. Maecenas sed diam eget risus varius blandit sit amet non magna.
      </p>
      <p>
        Maecenas faucibus mollis interdum. Nulla vitae elit libero, a pharetra augue. Etiam porta sem malesuada magna mollis euismod. Etiam porta sem malesuada magna mollis euismod.
      </p>
    </div>
  </div>
</div>
`;
